--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -47,7 +47,7 @@ $global-font-color: $text-color;
 $body-font-family: Arial, sans-serif;
 $global-padding: 16px;
 $global-margin: 16px;
-$global-radius: 3px;
+$global-radius: 5px;
 $global-rounded: 500px;
 $global-breakpoint: $global-width + $global-gutter;
 
@@ -120,7 +120,7 @@ $button-color: $white;
 $button-color-alt: $medium-gray;
 $button-font-weight: bold;
 $button-margin: 0 0 $global-margin 0;
-$button-background: $primary-color;
+$button-background: $orange-color;
 $button-border: 2px solid $button-background;
 $button-radius: $global-radius;
 $button-rounded: $global-rounded;
