--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -18,20 +18,6 @@
   background-color: $blue-color;
 }
 
-.bg-light-gray {
-  background-color: $bg-gray;
-}
-
-.button-big {
-  background-color: $orange-color;
-  border-bottom: solid 3px $border-orange-color;
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 15px 10px;
-  border-radius: 5px;
-  color: $white !important;
-  font-size: 20px;
-}
 
 .button-small {
   background-color: $orange-color;
@@ -41,9 +27,12 @@
   padding: 10px 5px;
   border-radius: 5px;
   color: $white !important;
-  font-size: 16px;
+  font-size: 14px;
 }
 
+.button a {
+  border-bottom: solid 3px $border-orange-color !important;
+}
 
 p {
   font-size: 16px;
@@ -65,6 +54,15 @@ p {
   span { color: $footer-text-color; }
 }
 
+.companies {
+  background-color: #f6f6f8;
+  border-top: solid 2px $blue-color;
+  padding-top: 15px;
+  a {
+    color: $blue-color;
+  }
+}
+
 .social-links {
   a {
     display: inline-block;
@@ -74,5 +72,12 @@ p {
     width: 50px !important;
     height: 50px !important;
     margin: 0 auto;
+  }
+}
+
+
+.cart-product {
+  .wrapper-inner {
+    padding: 10px;
   }
 }
