--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -1,7 +1,38 @@
 .header {
-  background-color: $black;
+  .wrapper-inner {
+    padding: 10px 22px;
+    img {
+      width: 200px;
+      height: auto;
+    }
+    p {
+      font-size: 15px;
+      padding-left: 75px;
+      margin-bottom: 0;
+    }
+  }
 }
 
+.h1 {
+  .wrapper-inner {
+    padding: 22px 22px;
+    font-size: 28px;
+    h1 {
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 0;
+    }
+    p {
+      font-size: 21px;
+    }
+  }
+}
+
+.line {
+  height: 1px;
+  width: 100px;
+  background-color: $blue-color;
+}
 .text-white {
   color: $white-color;
 }
@@ -18,6 +49,15 @@
   background-color: $blue-color;
 }
 
+
+.text-under-img {
+  .wrapper-inner {
+    line-height: 20px;
+    padding: 10px;
+    color: white;
+    font-size: 17px;
+  }
+}
 
 .button-small {
   background-color: $orange-color;
@@ -36,6 +76,7 @@
 
 p {
   font-size: 16px;
+  line-height: 20px;
 }
 
 .img-product {
