change bg color + change buttons color

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -15,7 +15,7 @@
 //colors
 $black: #222525;
 $blue-color: #608ac3;
-$orange-color: #e39344;
+$orange-color: #f49418;
 $border-orange-color: #c98147;
 $white-color: white;
 $text-color: #201600;
@@ -41,7 +41,7 @@ $pre-color: #ff6908;
 $global-width: 580px;
 $global-width-small: 95%;
 $global-gutter: 15px;
-$body-background: gray;
+$body-background: white;
 $container-background: $white;
 $global-font-color: $text-color;
 $body-font-family: Arial, sans-serif;
